Archive2/ff/36d34c6f6a94a2/output
main.cpp:7:13: warning: ISO C++ forbids zero-size array 'bar' [-Wpedantic]
     int bar[];
             ^
main.cpp:9:37: error: expected ';' at end of member declaration
     Foo(std::initializer_list<int> i) bar(i);
                                     ^
main.cpp:9:43: error: 'i' has not been declared
     Foo(std::initializer_list<int> i) bar(i);
                                           ^
main.cpp:9:44: error: ISO C++ forbids declaration of 'bar' with no type [-fpermissive]
     Foo(std::initializer_list<int> i) bar(i);
                                            ^
main.cpp:9:44: error: 'int Foo::bar(int)' conflicts with a previous declaration
main.cpp:7:13: note: previous declaration 'int Foo::bar [0]'
     int bar[];
             ^
